Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
0.13.0, 0.14.0, 0.15.0, 0.14.1, 0.14.2, 0.16.0
-
None
Description
contrib/fb303 no longer compiles after THRIFT-4730 removed ReadWriteMutex.
The ReadWriteMutex used by fb303 is protecting counter statistics. These are very write-heavy and read-light (these are read only when the Service methods getCounters() or getCounter() are called). Because of this, retaining a read-write mutex to protect these counters is unjustified and we can safely swap this out for a normal Mutex.
Compilation also fails after THRIFT-5168 removed generation of *_constants.cpp and *_constants.h generation because the fb303 Makefile explicitly depends on these unnecessary files
Attachments
Issue Links
- links to