THRIFT-5599: contrib/fb303 does not compile after C++ library refactorings Patch: Michael Leinartas

This closes #2624